SVM from pretreatment

--- a/bt474ml/Dockerfile
+++ b/bt474ml/Dockerfile
@@ -1,7 +1,12 @@
-FROM taj159/scanpy_development:0.2
-USER root
-COPY runScript.py /tmp/runScript.py
-RUN chmod +rx /tmp/runScript.py
-ENV PATH "/tmp:$PATH"
-USER $MAMBA_USER
+FROM taj159/scanpy_development:0.3
+# Make RUN commands use the new environment:
+SHELL ["conda", "run", "-n", "sc-tutorial_mamba", "/bin/bash", "-c"]
 
+# Demonstrate the environment is activated:
+RUN echo "Make sure scanpy is installed:"
+RUN python -c "import scanpy"
+# The code to run when container is started:
+COPY runScript.py /code/runScript.py
+RUN chmod +rx /code/runScript.py
+ENV PATH "/code:$PATH"
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "sc-tutorial_mamba", "python", "/code/runScript.py"]
