--- a/scanpyDevelopment/Dockerfile
+++ b/scanpyDevelopment/Dockerfile
@@ -1,7 +1,4 @@
 # Dockerfile.just-mamba
-FROM mambaorg/micromamba:0.23.3
-COPY --chown=$MAMBA_USER:$MAMBA_USER env.yaml /tmp/env.yaml
-RUN micromamba install -y -n base -f /tmp/env.yaml && \
-    micromamba clean --all --yes
-ARG MAMBA_DOCKERFILE_ACTIVATE=1  # (otherwise python will not be found)
-
+FROM condaforge/mambaforge
+COPY environment.yml .
+RUN mamba env create -f environment.yml
