--- a/bt474ml/Dockerfile
+++ b/bt474ml/Dockerfile
@@ -1,6 +1,6 @@
-FROM taj159/scanpy_development:0.3
+FROM taj159/sc-post:0.1
 # Make RUN commands use the new environment:
-SHELL ["conda", "run", "-n", "sc-tutorial_mamba", "/bin/bash", "-c"]
+SHELL ["conda", "run", "-n", "sc-post", "/bin/bash", "-c"]
 
 # Demonstrate the environment is activated:
 RUN echo "Make sure scanpy is installed:"
@@ -9,4 +9,4 @@ RUN python -c "import scanpy"
 COPY runScript.py /code/runScript.py
 RUN chmod +rx /code/runScript.py
 ENV PATH "/code:$PATH"
-ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "sc-tutorial_mamba", "python", "/code/runScript.py"]
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "sc-post", "python", "/code/runScript.py"]
