--- a/sc-post/Dockerfile
+++ b/sc-post/Dockerfile
@@ -1,4 +1,6 @@
-# Dockerfile.just-mamba
-FROM condaforge/mambaforge
-COPY environment.yml .
-RUN mamba env create -f environment.yml
+FROM mambaorg/micromamba:0.24.0
+COPY --chown=$MAMBA_USER:$MAMBA_USER env.yaml /tmp/env.yaml
+RUN micromamba install -y -n base -f /tmp/env.yaml && \
+    micromamba clean --all --yes
+ARG MAMBA_DOCKERFILE_ACTIVATE=1  # (otherwise python will not be found)
+
