Changed to micromamba

--- a/scanpy_development/Dockerfile
+++ b/scanpy_development/Dockerfile
@@ -1,15 +1,5 @@
-FROM continuumio/miniconda3
-
-WORKDIR /app
-
-# Make RUN commands use `bash --login`:
-SHELL ["/bin/bash", "--login", "-c"]
-
-# Create the environment:
-COPY environment.yml .
-RUN conda env create -f environment.yml
-
-# Initialize conda in bash config fiiles:
-RUN conda init bash
-
-# ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "myenv", "python", "run.py"]
+FROM mambaorg/micromamba:0.24.0
+COPY --chown=$MAMBA_USER:$MAMBA_USER env.yaml /tmp/env.yaml
+RUN micromamba install -y -n base -f /tmp/env.yaml && \
+    micromamba clean --all --yes
+ARG MAMBA_DOCKERFILE_ACTIVATE=1  # (otherwise python will not be found)
